--- a/algorithm/.gitignore
+++ b/algorithm/.gitignore
@@ -5,10 +5,10 @@ target/
 .kotlin
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
+.idea/*.xml
 .idea/libraries/
+.idea/codeStyles/*
+.idea/.gitignore
 *.iws
 *.iml
 *.ipr
